[tool.poetry]
name = "smart_bear"
version = "0.1.0"
description = ""
authors = ["Shawn Koh <shawn@shawnkoh.sg>"]

[tool.poetry.scripts]
smart_bear = "smart_bear.cli:run"
safe-bear = "smart_bear.safecli:app"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
Markdown = "^3.3.4"
beautifulsoup4 = "^4.10.0"
lxml = "^4.6.3"
regex = "^2021.10.23"
unmarkd = "^0.1.7"
psutil = "^5.8.0"
python-dotenv = "^0.19.1"
typer = {extras = ["all"], version = "^0.4.0"}
arrow = "^1.2.1"
# anki = "^2.1.49"
furl = "^2.1.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
hypothesis = "^6.24.0"
pre-commit = "^2.15.0"
black = "^21.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
